# VLA-Manipulation-Robustness-under-Distribution-Shift

./: .gitignore  8.smolvla.ipynb  =0.4.3  Architecture.md  CLAUDE.md  Experiment.md  README.md  pyproject.toml  setup_viewer.py
experiments/: Experiment.md  analysis.py  eval_runner.py  make_grid_gif.py  old_results.csv  patched_env.py  results.csv
experiments/monolithic/: results.csv
mujoco_env/: y_env2.py
policy/: __init__.py
robot/: __init__.py  sim_env.py
scripts/: analysis.py  eval_hvla.py  eval_runner.py  make_grid_gif.py  setup_viewer.py
vla_manipulation/: assets.py
vla_manipulation/common/: types.py
vla_manipulation/envs/: __init__.py  ik.py  mujoco_parser.py  sim_env.py  utils.py
vla_manipulation/evaluation/: logger.py  metrics.py
vla_manipulation/policy/hierarchical/: config.py  depth_projector.py  gemini_planner.py  mujoco_executor.py  pid_controller.py  trajectory_builder.py
vla_manipulation/policy/monolithic/: metadata.py  smolvla.py
vla_manipulation/simulation/: patched_env.py
